Rajeshwar | Testing a mutation mapping in Books controller